# reachy-mini-apps

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  LICENSE  PROMPTS.md  README.md  SESSION_NOTES.md  TROUBLESHOOTING.md  pyproject.toml  reachy-mini-prompt-0.md
.claude/: PROMPT_LOG.md
.claude/prompt-library/: README.md
.claude/prompt-library/project-setup/: prompt-logging-system.md
camera-live-feed/: README.md  index.html  pyproject.toml  style.css
camera-live-feed/camera_live_feed/: __init__.py  main.py
camera-live-feed/camera_live_feed/static/: index.html  main.js  style.css
quickstarts/: README.md  body_rotation.py  camera_capture.py  camera_dashboard.py  combined_movement.py  head_movement.py  wiggle_antennas.py
