[project]
name = "camera-live-feed"
version = "0.1.0"
description = "Live camera feed from Reachy Mini robot - stream to web browser"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "reachy-mini>=1.2.0",
    "opencv-python>=4.8.0",
    "fastapi>=0.100.0",
]

[project.entry-points."reachy_mini.apps"]
camera_live_feed = "camera_live_feed:CameraLiveFeedApp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["camera_live_feed"]
