[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camera-live-feed"
version = "0.1.0"
description = "Live camera feed dashboard for Reachy Mini"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "reachy-mini>=1.2.4",
]

[project.entry-points."reachy_mini_apps"]
camera_live_feed = "camera_live_feed.main:CameraLiveFeed"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
camera_live_feed = ["static/*"]
